--- a/src/styles.css
+++ b/src/styles.css
@@ -102,7 +102,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     color: #333;
-    overflow: auto;
+    /* overflow: auto; */
     /* overflow-x: hidden; */
 }
 
